optimize z-index to avoid view obstruction

--- a/src/stylesheets/styles/cards/_merch-card.scss
+++ b/src/stylesheets/styles/cards/_merch-card.scss
@@ -18,7 +18,7 @@
 .merch-card-cost {
   top: 0;
   right: -3%;
-  z-index: 99;
+  z-index: 1;
   position: absolute;
   font-size: xx-large;
   text-align: center;
